# ROS_pratice

./: README.md
pratice_interfaces/: CMakeLists.txt  package.xml
pratice_interfaces/msg/: information.msg
ros_pratice/: package.xml  setup.cfg  setup.py
ros_pratice/launch/: launch.py
ros_pratice/ros_pratice/: info_pub.py  info_sub.py
