<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_pratice</name>
  <version>0.0.0</version>
  <description>TODO: circle turtle</description>
  <maintainer email="ghdals6864@naver.com">hongmin</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>turtlesim</depend>
  <depend>std_msgs</depend>
  <depend>pratice_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
